crates/rome_formatter/tests/specs/prettier/cursor/cursor-10.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: cursor-10.js

---
# Input
```js
const y = 5




<|>
  
```

# Output
```js
const y = 5




<|>

```

# Errors
```
error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
  ┌─ cursor-10.js:6:2
  │
6 │ <|>
  │ -^ But this operator was encountered instead
  │ │ 
  │ This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
  ┌─ cursor-10.js:6:3
  │
6 │ <|>
  │  -^ But this operator was encountered instead
  │  │ 
  │  This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ''
  ┌─ cursor-10.js:7:3
  │
7 │   
  │   ^ Expected an expression here


```


